--- a/site/examples/app.html
+++ b/site/examples/app.html
@@ -6,20 +6,10 @@
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="stylesheet" href="../package/tuktuk.css">
-    <link rel="stylesheet" href="../package/tuktuk.theme.mock.css">
+    <link rel="stylesheet" href="../package/tuktuk.theme.default.css">
     <!-- TUKTUK.WIDGETS -->
     <link rel="stylesheet" href="../package/tuktuk.icons.css">
     <style>
-        aside > header .logo {
-            margin-top: 10px;
-            max-height: 30px; }
-
-        aside footer img {
-          height: 16px;
-          position: relative;
-          top: 5px;
-          left: 2px; }
-
         .thumb {
             height: 96px;
             margin-bottom: 2.5em;
@@ -36,7 +26,7 @@
     <aside id="menu" class="absolute bck light column_3">
         <header class="bck dark">
             <div class="session on-left">
-                <strong>logged in as <a href="#" class="color default">soyjavi</a></strong>
+                <strong>logged in as <a href="#" class="color theme">soyjavi</a></strong>
             </div>
             <a href="#" data-box="close" class="on-right text big icon remove color white"></a>
         </header>
@@ -75,8 +65,8 @@
     </aside>
 
     <aside class="column_3">
-        <header class="bck theme text center ">
-            <img src="../images/logo-white.png" class="logo on-left"/>
+        <header class="bck theme">
+            <strong>TukTuk Application</strong>
             <a href="#" class="on-right text big icon cog" data-tuktuk-box="menu"></a>
         </header>
         <article class="bck dark scroll">
@@ -112,7 +102,7 @@
             </nav>
         </article>
         <footer class="bck dark text center">
-            Handcrafted by <a href="http://tapquo.com" class="display inline"><img src="http://cdn.tapquo.com/images/logo_footer.png"/></a>
+            Handcrafted by <a href="http://tapquo.com" class="color theme text bold">tapquo</a>
         </footer>
     </aside>
 
@@ -122,8 +112,8 @@
             <h3 class="on-left text thin">Web Application <span class="tag bck theme">NEW!</span></h3>
             <nav class="on-right">
                 <button class="tiny">tiny</button>
-                <button class="small success">small</button>
-                <button class="alert">normal</button>
+                <button class="small">small</button>
+                <button class="">normal</button>
             </nav>
         </header>
         <article class="padding scroll">
@@ -170,8 +160,8 @@
 
             <nav class="on-right">
                 <button class="tiny">tiny</button>
-                <button class="small success">small</button>
-                <button class="alert">normal</button>
+                <button class="small">small</button>
+                <button class="">normal</button>
             </nav>
         </footer>
     </section>
