--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!-- TUKTUK -->
     <link rel="stylesheet" href="package/tuktuk.css">
-    <link rel="stylesheet" href="package/tuktuk.theme.mock.css">
+    <link rel="stylesheet" href="package/tuktuk.theme.default.css">
     <!-- TUKTUK.WIDGETS -->
     <link rel="stylesheet" href="package/tuktuk.icons.css">
     <style>
