--- a/www/examples/app.html
+++ b/www/examples/app.html
@@ -5,10 +5,10 @@
     <title>tuktuk - Application Example</title>
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <link rel="stylesheet" href="../package/tuktuk.css">
-    <link rel="stylesheet" href="../package/tuktuk.theme.default.css">
+    <link rel="stylesheet" href="../../package/tuktuk.css">
+    <link rel="stylesheet" href="../../package/tuktuk.theme.default.css">
     <!-- TUKTUK.WIDGETS -->
-    <link rel="stylesheet" href="../package/tuktuk.icons.css">
+    <link rel="stylesheet" href="../../package/tuktuk.icons.css">
     <style>
         .thumb {
             height: 96px;
@@ -197,7 +197,7 @@
     </div>
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="../package/tuktuk.js"></script>
+    <script src="../../package/tuktuk.js"></script>
     <script>
         TukTuk.Modal.loading();
         setTimeout( TukTuk.Modal.hide, 1000);
