--- a/www/index.html
+++ b/www/index.html
@@ -14,9 +14,9 @@
     <title>TukTuk</title>
     <!-- STYLESHEETs -->
     <link rel="icon" href="http://tuktuk.tapquo.com/img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/package/tuktuk.css">
-    <link rel="stylesheet" href="/package/tuktuk.theme.default.css">
-    <link rel="stylesheet" href="/package/tuktuk.icons.css">
+    <link rel="stylesheet" href="../package/tuktuk.css">
+    <link rel="stylesheet" href="../package/tuktuk.theme.default.css">
+    <link rel="stylesheet" href="../package/tuktuk.icons.css">
 </head>
 
 <body data-stellar-background-ratio="0.6" data-page="index", data-product="tuktuk">
@@ -112,26 +112,26 @@
 
         <div class="row align center">
             <div class="column_3">
-                <a href="/microsites/tuktuk_blog.html" target="_blank" class="tip-right" data-tip="Click to view">
+                <a href="examples/blog.html" target="_blank" class="tip-right" data-tip="Click to view">
                     <img src="http://tuktuk.tapquo.com/img/product/tuktuk/template-blog.png" class="responsive">
                 </a>
                 <h6><strong>Blog</strong> Page</h6>
             </div>
             <div class="column_3">
-                <a href="/microsites/tuktuk_landing.html" target="_blank" class="tip-right" data-tip="Click to view">
+                <a href="examples/landing.html" target="_blank" class="tip-right" data-tip="Click to view">
                     <img src="http://tuktuk.tapquo.com/img/product/tuktuk/template-landing.png" class="responsive">
                 </a>
                 <h6><strong>Landing</strong> Page</h6>
             </div>
             <div class="column_3">
-                <a href="/microsites/tuktuk_profile.html" target="_blank" class="tip-left" data-tip="Click to view">
+                <a href="examples/profile.html" target="_blank" class="tip-left" data-tip="Click to view">
                     <img src="http://tuktuk.tapquo.com/img/product/tuktuk/template-profile.png" class="responsive">
                 </a>
                 <h6><strong>Profile</strong> Page</h6>
             </div>
 
             <div class="column_3">
-                <a href="/microsites/tuktuk_app.html" target="_blank" class="tip-left" data-tip="Click to view">
+                <a href="examples/app.html" target="_blank" class="tip-left" data-tip="Click to view">
                     <img src="http://tuktuk.tapquo.com/img/product/tuktuk/template-app.png" class="responsive">
                 </a>
                 <h6>Web <strong>Application</strong></h6>
@@ -198,6 +198,6 @@
     </section>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="/package/tuktuk.js"></script>
+    <script src="../package/tuktuk.js"></script>
 </body>
 </html>
