--- a/www/examples/blog.html
+++ b/www/examples/blog.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <title>TukTuk - Blog Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <link rel="stylesheet" href="../package/tuktuk.css">
-    <link rel="stylesheet" href="../package/tuktuk.theme.default.css">
-    <link rel="stylesheet" href="../package/tuktuk.icons.css">
+    <link rel="stylesheet" href="../../package/tuktuk.css">
+    <link rel="stylesheet" href="../../package/tuktuk.theme.default.css">
+    <link rel="stylesheet" href="../../package/tuktuk.icons.css">
     <style>
         body > header .logo {
             margin-right: 1rem;
@@ -127,6 +127,6 @@
     </footer>
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="../package/tuktuk.js"></script>
+    <script src="../../package/tuktuk.js"></script>
 </body>
 </html>
