--- a/www/examples/profile.html
+++ b/www/examples/profile.html
@@ -5,10 +5,10 @@
     <title>tuktuk - Profile Example</title>
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <link rel="stylesheet" href="../package/tuktuk.css">
-    <link rel="stylesheet" href="../package/tuktuk.theme.default.css">
+    <link rel="stylesheet" href="../../package/tuktuk.css">
+    <link rel="stylesheet" href="../../package/tuktuk.theme.default.css">
     <!-- TUKTUK.WIDGETS -->
-    <link rel="stylesheet" href="../package/tuktuk.icons.css">
+    <link rel="stylesheet" href="../../package/tuktuk.icons.css">
     <style>
         body > header .logo {
             margin-right: 1rem;
@@ -123,6 +123,6 @@
     </footer>
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="../package/tuktuk.js"></script>
+    <script src="../../package/tuktuk.js"></script>
 </body>
 </html>
