Using new version of flexbox

--- a/www/examples/app.html
+++ b/www/examples/app.html
@@ -31,7 +31,7 @@
             <a href="#" data-box="close" class="on-right text big icon remove color white"></a>
         </header>
         <article class="bck light scroll">
-            <img src="http://cdn.tapquo.com/photos/javi_color.jpg" class="responsive padding-left padding-top padding-right"/>
+            <img src="http://cdn.tapquo.com/photos/javi_color.jpg" class="responsive"/>
 
             <div class="margin-left margin-right">
                 <h4 class="text bold color theme inline">Javi Jiménez</h4>
@@ -70,7 +70,7 @@
             <a href="#" class="on-right text big icon cog" data-tuktuk-box="menu"></a>
         </header>
         <article class="bck dark scroll">
-            <img src="http://cdn.tapquo.com/photos/javi_color.jpg" class="responsive padding-left padding-top padding-right"/>
+            <img src="http://cdn.tapquo.com/photos/javi_color.jpg" class="responsive"/>
 
             <div class="margin-left margin-right">
                 <h4 class="text bold color theme inline">Javi Jiménez</h4>
