--- a/www/examples/app.html
+++ b/www/examples/app.html
@@ -42,7 +42,7 @@
             <hr/>
             <div class="margin" data-tuktuk="buttons">
                 <button data-tuktuk-modal="modal" class="theme" data-tip="Click to view a modal window">Modal</button>
-                <button data-tuktuk-modal="modal-right" data-tip="Click to view a side window" class="">Aside Right</button>
+                <button data-tuktuk-modal="modal-right" data-tip="Click to view a side window" class="">Aside</button>
             </div>
             <hr>
             <ul class="margin" data-tuktuk="totals">
@@ -81,7 +81,7 @@
             <hr/>
             <div class="margin" data-tuktuk="buttons">
                 <button data-tuktuk-modal="modal" class="theme" data-tip="Click to view a modal window">Modal</button>
-                <button data-tuktuk-modal="modal-right" data-tip="Click to view a side window" class="">Aside Right</button>
+                <button data-tuktuk-modal="modal-right" data-tip="Click to view a side window" class="">Aside</button>
             </div>
             <hr>
             <ul class="margin" data-tuktuk="totals">
@@ -196,7 +196,7 @@
         </footer>
     </div>
 
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="../../package/tuktuk.js"></script>
     <script>
         TukTuk.Modal.loading();
