--- a/www/examples/blog.html
+++ b/www/examples/blog.html
@@ -126,7 +126,7 @@
         </div>
     </footer>
 
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="../../package/tuktuk.js"></script>
 </body>
 </html>
