--- a/www/examples/landing.html
+++ b/www/examples/landing.html
@@ -14,17 +14,6 @@
             margin-right: 1rem;
             max-height: 3rem;
             border-radius: .25rem;}
-
-        section.landing input {
-            border-radius: 1px 0px 0px 1px !important;
-            height: 48px;}
-
-        section.landing button {
-            border-radius: 0px 1px 1px 0px !important;
-            height: 48px;}
-
-        .button.large, button.large {
-            font-size: 1.3em;}
     </style>
 </head>
 <body>
@@ -50,9 +39,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="column_6 offset_3 form subscribe">
+            <div class="column_6 offset_3 form">
                 <input type="email" id="mail" class="large" placeholder="Your email address">
-                <button class="button large icon envelope"></button>
+                <button class="button large ">Sign Up</button>
             </div>
         </div>
         <h5 class="text book">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h5>
@@ -142,7 +131,7 @@
         </div>
     </footer>
 
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="../../package/tuktuk.js"></script>
 </body>
 </html>
