--- a/www/examples/profile.html
+++ b/www/examples/profile.html
@@ -36,13 +36,13 @@
         </div>
     </header>
 
-    <section class="padding bck dark">
-        <div class="row ">
-            <div class="column_3 padding" >
+    <section class="bck dark ">
+        <div class="row padding-top padding-bottom">
+            <div class="column_3 padding-top" >
                 <img src="http://cdn.tapquo.com/photos/javi_color.jpg" class=" responsive rounded" data-tip="Hello world!" />
             </div>
             <div class="column_9 color white">
-                <h1 class="text bold color theme margin-top">soyjavi</h1>
+                <h1 class="text bold color theme">soyjavi</h1>
                 <h3 class="text normal italic margin-bottom">Javi Jiménez Villar</h3>
                 <h4 class="text justify margin-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos iste adipisci deserunt officia alias quod unde nisi animi maiores ex amet commodi rerum veritatis reiciendis autem ad optio quisquam praesentium.</h4>
 
@@ -122,7 +122,7 @@
         </div>
     </footer>
 
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="../../package/tuktuk.js"></script>
 </body>
 </html>
