--- a/www/index.html
+++ b/www/index.html
@@ -19,10 +19,10 @@
     <link rel="stylesheet" href="../package/tuktuk.icons.css">
 </head>
 
-<body data-stellar-background-ratio="0.6" data-page="index", data-product="tuktuk">
+<body data-page="index", data-product="tuktuk">
     <!-- HEADER -->
     <header id="#home">
-        <div class="row">
+        <div class="row padding">
             <nav class="column_8">
                 <a href="/" class="logo"></a>
                 <a href="https://github.com/soyjavi/tuktuk/blob/master/README.md" target="_blank">Docs</a>
@@ -32,77 +32,77 @@
             </nav>
             <nav class="column_4 align right">
                 <a href="http://tapquo.com/store/tuktuk" class="margin_right">Store</a>
-                <a href="http://tapquo.com/store/tuktuk#download" class="button">Download</a>
+                <a href="http://tapquo.com/store/tuktuk#download" class="button largebck theme">Download</a>
             </nav>
         </div>
     </header>
 
     <!-- SLOGAN -->
-    <section class="landing bck bg-2" data-stellar-background-ratio="0.6" data-stellar-ratio="0.5">
-        <div class="overlay">
+    <section class="landing bck bg-2">
+        <div>
             <div class="row">
                 <div class="column_8 offset_2 align center">
                     <h2>A new smart kid on the Responsive block...</h2>
                     <h5 class="margin-top margin-bottom">... Not trying to compete with Bootstrap or Foundation because they play in another league.</h5 class="text normal">
-                        <a href="http://tapquo.com/store/tuktuk#download" class="button download">Download</a>
+                        <a href="http://tapquo.com/store/tuktuk#download" class="button large">Download</a>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- INFO -->
-    <section class="bck dark align center">
-        <div class="row no-padding-bottom">
+    <section class="bck dark align center padding-top padding-bottom">
+        <div class="row ">
             <div class="column_10 offset_1">
                 <h1 class="color tuktuk">Turn it up to 12 columns</h1>
                 <h2>Tuktuk is divided horizontally into a series of 12 columns, and vertically into rows. 12 columns divide nicely into equal columns of two, three, four, or six columns.</h2>
             </div>
         </div>
 
-        <div class="row columns">
-            <div class="column_1 bck tuktuk padding-top padding-bottom">1</div>
-            <div class="column_1 bck tuktuk padding-top padding-bottom">1</div>
-            <div class="column_1 bck tuktuk padding-top padding-bottom">1</div>
-            <div class="column_1 bck tuktuk padding-top padding-bottom">1</div>
-            <div class="column_1 bck tuktuk padding-top padding-bottom">1</div>
-            <div class="column_1 bck tuktuk padding-top padding-bottom">1</div>
-            <div class="column_1 bck tuktuk padding-top padding-bottom">1</div>
-            <div class="column_1 bck tuktuk padding-top padding-bottom">1</div>
-            <div class="column_1 bck tuktuk padding-top padding-bottom">1</div>
-            <div class="column_1 bck tuktuk padding-top padding-bottom">1</div>
-            <div class="column_1 bck tuktuk padding-top padding-bottom">1</div>
-            <div class="column_1 bck tuktuk padding-top padding-bottom">1</div>
+        <div class="row columns margin-top">
+            <div class="column_1 bck theme margin-bottom padding-top padding-bottom">1</div>
+            <div class="column_1 bck theme margin-bottom padding-top padding-bottom">1</div>
+            <div class="column_1 bck theme margin-bottom padding-top padding-bottom">1</div>
+            <div class="column_1 bck theme margin-bottom padding-top padding-bottom">1</div>
+            <div class="column_1 bck theme margin-bottom padding-top padding-bottom">1</div>
+            <div class="column_1 bck theme margin-bottom padding-top padding-bottom">1</div>
+            <div class="column_1 bck theme margin-bottom padding-top padding-bottom">1</div>
+            <div class="column_1 bck theme margin-bottom padding-top padding-bottom">1</div>
+            <div class="column_1 bck theme margin-bottom padding-top padding-bottom">1</div>
+            <div class="column_1 bck theme margin-bottom padding-top padding-bottom">1</div>
+            <div class="column_1 bck theme margin-bottom padding-top padding-bottom">1</div>
+            <div class="column_1 bck theme margin-bottom padding-top padding-bottom">1</div>
         </div>
 
         <div class="row columns">
-            <div class="column_4 bck tuktuk padding-top padding-bottom">4</div>
-            <div class="column_4 bck tuktuk padding-top padding-bottom">4</div>
-            <div class="column_4 bck tuktuk padding-top padding-bottom">4</div>
+            <div class="column_4 bck theme margin-bottom padding-top padding-bottom">4</div>
+            <div class="column_4 bck theme margin-bottom padding-top padding-bottom">4</div>
+            <div class="column_4 bck theme margin-bottom padding-top padding-bottom">4</div>
         </div>
         <div class="row columns">
-            <div class="column_4 bck tuktuk padding-top padding-bottom ">4</div>
-            <div class="column_8 bck tuktuk padding-top padding-bottom">8</div>
+            <div class="column_4 bck theme margin-bottom padding-top padding-bottom ">4</div>
+            <div class="column_8 bck theme margin-bottom padding-top padding-bottom">8</div>
         </div>
         <div class="row columns">
-            <div class="column_6 bck tuktuk padding-top padding-bottom">6</div>
-            <div class="column_6 bck tuktuk padding-top padding-bottom">6</div>
+            <div class="column_6 bck theme margin-bottom padding-top padding-bottom">6</div>
+            <div class="column_6 bck theme margin-bottom padding-top padding-bottom">6</div>
         </div>
         <div class="row columns">
-            <div class="column_12 bck tuktuk padding-top padding-bottom">12</div>
+            <div class="column_12 bck theme margin-bottom padding-top padding-bottom">12</div>
         </div>
         <div class="row columns">
-            <div class="column_4 offset_4 bck tuktuk padding-top padding-bottom">4 with 4 offset</div>
+            <div class="column_4 offset_4 bck theme margin-bottom padding-top padding-bottom">4 with 4 offset</div>
         </div>
         <div class="row columns">
-            <div class="column_3 offset_3 bck tuktuk padding-top padding-bottom">3 with 3 offset</div>
-            <div class="column_3 offset_3 bck tuktuk padding-top padding-bottom">3 with 3 offset</div>
+            <div class="column_3 offset_3 bck theme margin-bottom padding-top padding-bottom">3 with 3 offset</div>
+            <div class="column_3 offset_3 bck theme margin-bottom padding-top padding-bottom">3 with 3 offset</div>
         </div>
         <div class="row columns">
-            <div class="column_8 offset_4 bck tuktuk padding-top padding-bottom">8 with 4 offset</div>
+            <div class="column_8 offset_4 bck theme margin-bottom padding-top padding-bottom">8 with 4 offset</div>
         </div>
     </section>
 
-    <section class="bck light features">
+    <section class="bck light features padding-top padding-bottom">
         <div class="row no-padding-bottom">
             <div class="column_10 offset_1 align center">
                 <h1 class="color tuktuk">Examples</h1>
@@ -110,7 +110,7 @@
             </div>
         </div>
 
-        <div class="row align center">
+        <div class="row align center padding">
             <div class="column_3">
                 <a href="examples/blog.html" target="_blank" class="tip-right" data-tip="Click to view">
                     <img src="http://tuktuk.tapquo.com/img/product/tuktuk/template-blog.png" class="responsive">
@@ -141,9 +141,9 @@
 
 
     <!-- FOOTER -->
-    <section id="author" data-stellar-background-ratio="0.6" data-stellars-ratio="0.5" class="bck bg-3">
-      <div class="overlay dark">
-        <div class="row no-padding-bottom">
+    <section id="author">
+      <div>
+        <div class="row padding text align center">
           <div class="offset_1 column_10">
             <h1 class="color tuktuk">Author</h1>
             <h2>
@@ -159,10 +159,10 @@
           </div>
         </div>
 
-        <footer id="footer">
+        <footer id="footer" class="padding-top padding-bottom margin-top bck light text tiny">
           <div class="row links">
             <div class="offset_1 column_2">
-                <a href="http://tapquo.com">
+                <a href="http://tapquo.com" class="display block">
                     <strong>Tapquo</strong>
                 </a>
                 <span>Campo Volantin, 17</span>
@@ -170,26 +170,22 @@
                 <span>SPAIN</span>
             </div>
             <div class="column_2">
-                <strong>About</strong>
-                <a href="https://github.com/soyjavi/QuoJS/blob/master/README.md" target="_blank">Docs</a>
-                <a href="http://tapquo.com/forum/quojs">Community</a>
+                <strong class="display block">About</strong>
+                <a href="https://github.com/soyjavi/QuoJS/blob/master/README.md" target="_blank">Docs</a> ·
+                <a href="http://tapquo.com/forum/quojs">Community</a> ·
                 <a href="https://github.com/soyjavi/quojs">Github</a>
             </div>
-            <div class="column_2">
-                <strong>Products</strong>
-                <a href="http://atoms.tapquo.com">Atoms</a>
-                <a href="http://appnima.tapquo.com">Appnima</a>
-                <a href="http://lungo.tapquo.com">Lungo</a>
-            </div>
-            <div class="column_2">
-                <strong>&nbsp;</strong>
-                <a href="http://quojs.tapquo.com">QuoJS</a>
-                <a href="http://yoi.tapquo.com">Yoi</a>
+            <div class="column_4">
+                <strong class="display block">Products</strong>
+                <a href="http://atoms.tapquo.com">Atoms</a> ·
+                <a href="http://appnima.tapquo.com">Appnima</a> ·
+                <a href="http://lungo.tapquo.com">Lungo</a> ·
+                <a href="http://quojs.tapquo.com">QuoJS</a> ·
+                <a href="http://yoi.tapquo.com">Yoi</a> ·
                 <a href="http://monocle.tapquo.com">Monocle</a>
             </div>
             <div class="column_2 align right">
-                <strong>&nbsp;</strong>
-                <span>Handcrafted with love.</span>
+                <strong class="display block">Crafted with LOVE</strong>
                 <span>©2014 Copyright.</span>
             </div>
           </div>
